# pydantic-collection

./: .coveragerc  404.html  README.md  index.html  mkdocs.yml  setup.cfg  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
contributing/: index.html
docs/: contributing.md
pydantic_collection/aws/apigateway/: models.py
pydantic_collection/aws/lambda_/: stubs.py
pydantic_collection/aws/sqs/: models.py
scripts/: format.sh  lint.sh  test.bat  test.sh
search/: search_index.json
tests/aws/apigateway/: test_models.py
tests/aws/lambda_/: test_models.py
tests/aws/sns/: test_models.py
tests/aws/sqs/: test_models.py
