[metadata]
name = pydantic-collection
description = pydantic-collection is collections of pydantic model
url = https://github.com/koxudaxi/pydantic-collection
long_description = file: README.md
long_description_content_type = text/markdown
author = Koudai Aono
author_email = koxudaxi@gmail.com
license_file = LICENSE
classifiers =
        Development Status :: 3 - Alpha
        Natural Language :: English
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
include_package_data = True
python_requires = >=3.8.0
zip_safe = True
setup_requires =
    pytest-runner
    setuptools-scm
install_requires =
    pydantic >= 1.4


tests_require =
    pytest
    pytest-cov
    pytest-mock
    mypy
    black
    isort

[options.extras_require]
docs =
    mkdocs
    mkdocs-material

wheel =
    wheel
    twine

ci =
    codecov

[aliases]
test = pytest
